--- a/article/sg0/static/css/main.css
+++ b/article/sg0/static/css/main.css
@@ -1,20 +1,163 @@
-body{
-    /* background-color: black; */
+body {
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+  /* padding: 20px; */
+  background-color: rgb(25, 25, 25);
+  color: rgb(255, 255, 255);
+  background-image: url("../image/cg/EV_SP01.png");
+  /* backdrop-filter: blur(3px); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* flex-direction: column; */
+  /* flex-grow: 0; */
 }
 
-a{
-    display: table;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 2;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    /* background-color: aqua; */
+.header {
+  /* background-color: #bfa; */
+  padding: 10px 20px 10px 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
-a:hover{
-    background-color: rgb(228, 149, 22);
-    color: rgb(138, 137, 150);
+.logo {
+  height: 200px;
+}
+
+.title {
+  /* background-color: #bfa; */
+  display: flex;
+  /* align-items: center; */
+  /* margin-top: 20px; */
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 0px 0px 6px rgba(228, 149, 22, 1.0),
+    3px -3px 2px rgba(255, 255, 255, 0.5);
+  /* -webkit-text-stroke: 1px rgba(175, 109, 48, 1.0); */
+}
+
+#name {
+  /* background-color: #bfa; */
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
+  font-size: 40px;
+  width: 190px;
+  text-align: justify;
+  margin: 0 5px;
+}
+
+#season {
+  /* background-color: #bfa; */
+  font-family: 'Roboto Mono', monospace;
+  /* color:rgb(255, 255, 255); */
+  /* text-shadow: 3 -3 3px black; */
+  font-size: 80px;
+  margin: 0 10px;
+}
+
+.clearlist {
+  /* background-color: #bfa; */
+  display: flex;
+  /* margin-right: 10px; */
+  /* align-items: center; */
+  /* vertical-align: center; */
+  /* width: 1200px; */
+}
+
+.clearlist li {
+  /* width: 90px; */
+  /* height: 200px; */
+  /* background-color: rgba(98, 94, 79, 0.8); */
+  /* border-radius: 10px; */
+  margin: 0 10px;
+  /* padding: 0 10px; */
+  /* font-size: 18px; */
+  /* text-align: center; */
+  /* line-height: 1.5; */
+  transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
+  cursor: pointer;;
+}
+
+.clearlist span {
+  display: none;
+}
+
+.route, .mask1 {
+  height: 200px;
+}
+
+.mask1 {
+  position: absolute;
+  opacity: 0;
+  /* transition: opacity 0.3s; */
+}
+
+.mask2 {
+  position: absolute;
+  opacity: 0;
+  top: 180px;
+  max-width: 100%;
+  transition: top 0.3s;
+
+}
+
+.clearlist li:hover {
+  transform: scale(1.1);
+  /* opacity: 1; */
+}
+
+.clearlist li:hover .mask1{
+  /* transform: scale(1.1); */
+  opacity: 1;
+}
+
+.clearlist li:hover .mask2{
+  /* transform: scale(1.1); */
+  top: 150px;
+  opacity: 1;
+}
+
+.menu {
+  /* margin-top: 20px; */
+  max-width: 100%;
+  padding: 0 10px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow: auto;
+  /* align-items: center; */
+}
+
+.menu a {
+  display: table;
+  width: 220px;
+  /* height: 50px; */
+  line-height: 40px;
+  /* line-height: 2; */
+  background-color: rgba(49, 52, 52, 0.6);
+  border-radius: 10px;
+  border: solid 1px rgba(247, 132, 8, 0.6);
+  margin: 5px 6px;
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
+  font-size: 18px;
+  letter-spacing: 2px;
+  color: rgb(247, 132, 8);
+  text-shadow: 0px 0px 4px rgb(0, 0, 0);
+  text-align: center;
+  transition: transform 0.3s ease;
+}
+
+.menu a:hover {
+  /* background-color: rgb(98, 94, 79, 0.8); */
+  transform: scale(1.1);
+
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 0px 0px 4px rgb(247, 132, 8);
 }
