--- a/article/sg0/static/css/main.css
+++ b/article/sg0/static/css/main.css
@@ -21,7 +21,7 @@ body {
 
 .header {
   /* background-color: #bfa; */
-  padding: 10px 20px 10px 10px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
 }
@@ -73,38 +73,41 @@ body {
   /* height: 200px; */
   /* background-color: rgba(98, 94, 79, 0.8); */
   /* border-radius: 10px; */
-  margin: 0 10px;
+  margin: 0 5px;
   /* padding: 0 10px; */
   /* font-size: 18px; */
   /* text-align: center; */
   /* line-height: 1.5; */
-  transition: transform 0.3s ease;
   display: flex;
   align-items: center;
-  cursor: pointer;;
+  position: relative;
+  transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .clearlist span {
   display: none;
 }
 
-.route, .mask1 {
+.route,
+.mask1 {
   height: 200px;
 }
 
 .mask1 {
   position: absolute;
   opacity: 0;
+  /* display: flex; */
   /* transition: opacity 0.3s; */
 }
 
 .mask2 {
   position: absolute;
   opacity: 0;
+  /* display: none; */
   top: 180px;
   max-width: 100%;
-  transition: top 0.3s;
-
+  transition: top 0.3s, opacity 0.3s;
 }
 
 .clearlist li:hover {
@@ -112,15 +115,16 @@ body {
   /* opacity: 1; */
 }
 
-.clearlist li:hover .mask1{
+.clearlist li:hover .mask1 {
   /* transform: scale(1.1); */
   opacity: 1;
 }
 
-.clearlist li:hover .mask2{
+.clearlist li:hover .mask2 {
   /* transform: scale(1.1); */
-  top: 150px;
+  /* display: flex; */
   opacity: 1;
+  top: 150px;
 }
 
 .menu {
@@ -144,7 +148,7 @@ body {
   background-color: rgba(49, 52, 52, 0.6);
   border-radius: 10px;
   border: solid 1px rgba(247, 132, 8, 0.6);
-  margin: 5px 6px;
+  margin: 5px 8px;
   font-family: 'ZCOOL QingKe HuangYou', sans-serif;
   font-size: 18px;
   letter-spacing: 2px;
