--- a/article/sg0/static/css/main.css
+++ b/article/sg0/static/css/main.css
@@ -3,7 +3,6 @@ body {
   width: 100%;
   margin: auto;
   padding: 0;
-  /* padding: 20px; */
   background-color: rgb(25, 25, 25);
   color: rgb(255, 255, 255);
   background-image: url("../image/cg/EV_SP01.png");
@@ -14,7 +13,6 @@ body {
   background-position: center;
   /* overflow: hidden; */
   /* display: flex; */
-  /* justify-content: center; */
   /* flex-direction: column; */
   /* flex-grow: 0; */
 }
@@ -23,49 +21,19 @@ body {
   /* background-color: #bfa; */
   padding: 10px;
   display: flex;
+  /* align-items: center; */
   justify-content: space-between;
 }
 
 .logo {
-  height: 200px;
-}
-
-.title {
-  /* background-color: #bfa; */
-  display: flex;
-  /* align-items: center; */
-  /* margin-top: 20px; */
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 0px 0px 6px rgba(228, 149, 22, 1.0),
-    3px -3px 2px rgba(255, 255, 255, 0.5);
-  /* -webkit-text-stroke: 1px rgba(175, 109, 48, 1.0); */
-}
-
-#name {
-  /* background-color: #bfa; */
-  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
-  font-size: 40px;
-  width: 190px;
-  text-align: justify;
-  margin: 0 5px;
-}
-
-#season {
-  /* background-color: #bfa; */
-  font-family: 'Roboto Mono', monospace;
-  /* color:rgb(255, 255, 255); */
-  /* text-shadow: 3 -3 3px black; */
-  font-size: 80px;
-  margin: 0 10px;
+  max-height: 200px;
 }
 
 .clearlist {
   /* background-color: #bfa; */
   display: flex;
-  /* margin-right: 10px; */
   /* align-items: center; */
-  /* vertical-align: center; */
-  /* width: 1200px; */
+  /* margin-right: 10px; */
 }
 
 .clearlist li {
@@ -102,34 +70,29 @@ body {
 }
 
 .mask2 {
+  max-width: 100%;
   position: absolute;
   opacity: 0;
-  /* display: none; */
   top: 180px;
-  max-width: 100%;
   transition: top 0.3s, opacity 0.3s;
 }
 
 .clearlist li:hover {
   transform: scale(1.1);
-  /* opacity: 1; */
 }
 
 .clearlist li:hover .mask1 {
-  /* transform: scale(1.1); */
   opacity: 1;
 }
 
 .clearlist li:hover .mask2 {
-  /* transform: scale(1.1); */
-  /* display: flex; */
   opacity: 1;
   top: 150px;
 }
 
 .menu {
   /* margin-top: 20px; */
-  max-width: 100%;
+  /* max-width: 100%; */
   padding: 0 10px;
   height: 600px;
   display: flex;
@@ -161,7 +124,6 @@ body {
 .menu a:hover {
   /* background-color: rgb(98, 94, 79, 0.8); */
   transform: scale(1.1);
-
   color: rgba(255, 255, 255, 0.8);
   text-shadow: 0px 0px 4px rgb(247, 132, 8);
 }
