--- a/article/sg0/static/css/main.css
+++ b/article/sg0/static/css/main.css
@@ -17,28 +17,37 @@ body {
   /* flex-grow: 0; */
 }
 
+img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
 .header {
   /* background-color: #bfa; */
+  /* max-height: 200px; */
   padding: 10px;
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-between;
 }
 
 .logo {
+  /* display: block; */
   max-height: 200px;
+  /* height: 100%; */
+  /* height: 200px; */
 }
 
 .clearlist {
   /* background-color: #bfa; */
   display: flex;
   /* align-items: center; */
-  /* margin-right: 10px; */
+  margin-right: 5px;
 }
 
 .clearlist li {
   /* width: 90px; */
-  /* height: 200px; */
+  height: 200px;
   /* background-color: rgba(98, 94, 79, 0.8); */
   /* border-radius: 10px; */
   margin: 0 5px;
@@ -57,11 +66,6 @@ body {
   display: none;
 }
 
-.route,
-.mask1 {
-  height: 200px;
-}
-
 .mask1 {
   position: absolute;
   opacity: 0;
@@ -70,11 +74,14 @@ body {
 }
 
 .mask2 {
-  max-width: 100%;
   position: absolute;
   opacity: 0;
   top: 180px;
   transition: top 0.3s, opacity 0.3s;
+}
+
+.mask1.active {
+  opacity: 1;
 }
 
 .clearlist li:hover {
@@ -92,33 +99,36 @@ body {
 
 .menu {
   /* margin-top: 20px; */
-  /* max-width: 100%; */
-  padding: 0 10px;
+  max-width: 100%;
+  margin: 0 10px;
   height: 600px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  overflow: auto;
+  overflow: hidden;
+  /* opacity: 1; */
   /* align-items: center; */
 }
 
 .menu a {
   display: table;
-  width: 220px;
+  /* max-width: 100%; */
+  width: 218px;
   /* height: 50px; */
-  line-height: 40px;
+  line-height: 38px;
   /* line-height: 2; */
   background-color: rgba(49, 52, 52, 0.6);
   border-radius: 10px;
   border: solid 1px rgba(247, 132, 8, 0.6);
   margin: 5px 8px;
   font-family: 'ZCOOL QingKe HuangYou', sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: 2px;
   color: rgb(247, 132, 8);
   text-shadow: 0px 0px 4px rgb(0, 0, 0);
   text-align: center;
-  transition: transform 0.3s ease;
+  /* transform: scale(1); */
+  transition: transform 0.3s;
 }
 
 .menu a:hover {
@@ -126,4 +136,32 @@ body {
   transform: scale(1.1);
   color: rgba(255, 255, 255, 0.8);
   text-shadow: 0px 0px 4px rgb(247, 132, 8);
+}
+
+.page-index {
+  display: flex;
+  margin-top: 10px;
+  padding-left: 20px;
+}
+
+.page-index li {
+  /* display: table; */
+  width: 19px;
+  height: 19px;
+  background-color: rgba(49, 52, 52, 0.8);
+  margin-right: 10px;
+  border-radius: 50%;
+  background-clip: content-box;
+  border: solid 1px rgba(247, 132, 8, 0.6);
+  cursor: pointer;
+}
+
+.page-index li:last-of-type {
+  margin-right: 0;
+}
+.page-index li:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.page-index li.active {
+  background-color: rgba(255, 255, 255, 0.8);
 }
