--- a/article/sg0/static/css/main.css
+++ b/article/sg0/static/css/main.css
@@ -1,167 +1,1 @@
-body {
-  max-width: 1200px;
-  width: 100%;
-  margin: auto;
-  padding: 0;
-  background-color: rgb(25, 25, 25);
-  color: rgb(255, 255, 255);
-  background-image: url("../image/cg/EV_SP01.png");
-  /* backdrop-filter: blur(3px); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  /* overflow: hidden; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* flex-grow: 0; */
-}
-
-img {
-  max-height: 100%;
-  max-width: 100%;
-}
-
-.header {
-  /* background-color: #bfa; */
-  /* max-height: 200px; */
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo {
-  /* display: block; */
-  max-height: 200px;
-  /* height: 100%; */
-  /* height: 200px; */
-}
-
-.clearlist {
-  /* background-color: #bfa; */
-  display: flex;
-  /* align-items: center; */
-  margin-right: 5px;
-}
-
-.clearlist li {
-  /* width: 90px; */
-  height: 200px;
-  /* background-color: rgba(98, 94, 79, 0.8); */
-  /* border-radius: 10px; */
-  margin: 0 5px;
-  /* padding: 0 10px; */
-  /* font-size: 18px; */
-  /* text-align: center; */
-  /* line-height: 1.5; */
-  display: flex;
-  align-items: center;
-  position: relative;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.clearlist span {
-  display: none;
-}
-
-.mask1 {
-  position: absolute;
-  opacity: 0;
-  /* display: flex; */
-  /* transition: opacity 0.3s; */
-}
-
-.mask2 {
-  position: absolute;
-  opacity: 0;
-  top: 180px;
-  transition: top 0.3s, opacity 0.3s;
-}
-
-.mask1.active {
-  opacity: 1;
-}
-
-.clearlist li:hover {
-  transform: scale(1.1);
-}
-
-.clearlist li:hover .mask1 {
-  opacity: 1;
-}
-
-.clearlist li:hover .mask2 {
-  opacity: 1;
-  top: 150px;
-}
-
-.menu {
-  /* margin-top: 20px; */
-  max-width: 100%;
-  margin: 0 10px;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  overflow: hidden;
-  /* opacity: 1; */
-  /* align-items: center; */
-}
-
-.menu a {
-  display: table;
-  /* max-width: 100%; */
-  width: 218px;
-  /* height: 50px; */
-  line-height: 38px;
-  /* line-height: 2; */
-  background-color: rgba(49, 52, 52, 0.6);
-  border-radius: 10px;
-  border: solid 1px rgba(247, 132, 8, 0.6);
-  margin: 5px 8px;
-  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
-  font-size: 20px;
-  letter-spacing: 2px;
-  color: rgb(247, 132, 8);
-  text-shadow: 0px 0px 4px rgb(0, 0, 0);
-  text-align: center;
-  /* transform: scale(1); */
-  transition: transform 0.3s;
-}
-
-.menu a:hover {
-  /* background-color: rgb(98, 94, 79, 0.8); */
-  transform: scale(1.1);
-  color: rgba(255, 255, 255, 0.8);
-  text-shadow: 0px 0px 4px rgb(247, 132, 8);
-}
-
-.page-index {
-  display: flex;
-  margin-top: 10px;
-  padding-left: 20px;
-}
-
-.page-index li {
-  /* display: table; */
-  width: 19px;
-  height: 19px;
-  background-color: rgba(49, 52, 52, 0.8);
-  margin-right: 10px;
-  border-radius: 50%;
-  background-clip: content-box;
-  border: solid 1px rgba(247, 132, 8, 0.6);
-  cursor: pointer;
-}
-
-.page-index li:last-of-type {
-  margin-right: 0;
-}
-.page-index li:hover {
-  background-color: rgba(255, 255, 255, 0.8);
-}
-.page-index li.active {
-  background-color: rgba(255, 255, 255, 0.8);
-}
+body{max-width:1200px;width:100%;margin:auto;padding:0;background-color:#191919;color:#fff;background-image:url("../image/cg/EV_SP01.png");background-repeat:no-repeat;background-size:cover;background-attachment:fixed;background-position:center}img{max-height:100%;max-width:100%}.header{margin-top:10px;display:flex;align-items:center;justify-content:space-between}.header .logo{max-height:200px}.header .clearlist{display:flex;align-items:center;margin-right:5px}.header .clearlist span{display:none}.header .clearlist li{height:200px;margin:0 5px;display:flex;align-items:center;position:relative;transition:transform .3s ease;cursor:pointer}.header .clearlist li:last-of-type{margin-right:0}.header .clearlist li .mask1{position:absolute;opacity:0}.header .clearlist li .mask1.active{opacity:1}.header .clearlist li .mask2{position:absolute;opacity:0;bottom:-10px;transition:.3s}.header .clearlist li:hover{transform:scale(1.1)}.header .clearlist li:hover .mask1{opacity:1}.header .clearlist li:hover .mask2{opacity:1;bottom:15px}.menu{max-width:100%;height:600px;display:flex;align-items:center;flex-direction:column;flex-wrap:wrap;overflow:hidden;white-space:nowrap}.menu a{display:table;width:220px;line-height:38px;background-color:rgba(50,50,50,0.6);border-radius:10px;border:solid 1px rgba(247,132,8,0.6);margin:5px 10px;font-family:'ZCOOL QingKe HuangYou',sans-serif;font-size:20px;letter-spacing:2px;color:#f78408;text-shadow:0px 0px 4px black;text-align:center;transition:.3s}.menu a:hover{transform:scale(1.1);color:rgba(255,255,255,0.7);text-shadow:0 0 4px #f78408}.page-index{display:flex;align-items:center;margin-top:10px;margin-left:15px}.page-index li{width:48px;height:8px;background-color:rgba(50,50,50,0.6);border-radius:10px;margin-right:10px;background-clip:content-box;border:solid 1px rgba(247,132,8,0.6);cursor:pointer}.page-index li:last-of-type{margin-right:0}.page-index li:hover,.page-index li.active{background-color:rgba(255,255,255,0.7)}
