--- a/article/sg0/static/css/main.less
+++ b/article/sg0/static/css/main.less
@@ -20,7 +20,7 @@ img {
 @color-sg-orange: rgb(247, 132, 8);
 @color-sg-orange-trans: rgba(247, 132, 8, 0.6);
 @color-sg-gray: rgb(50, 50, 50);
-@color-sg-gray-trans:rgba(50, 50, 50, 0.6);
+@color-sg-gray-trans: rgba(50, 50, 50, 0.6);
 @color-white-trans: rgba(255, 255, 255, 0.7);
 @anime-duration: 0.3s;
 
@@ -31,30 +31,36 @@ img {
 
 // 头部
 .header {
-  margin-top: 10px;
+  margin: 10px;
   .flex;
   justify-content: space-between;
+  height: 200px;
 
   .logo {
-    max-height: 200px;
+    .flex;
+    height: 100%;
   }
 
   // 路线选择按钮
   .clearlist {
     .flex;
-    margin-right: 5px;
-
-    span {
-      display: none;
-    }
+    height: 100%;
 
     li {
-      height: 200px;
+      height: 100%;
       margin: 0 5px;
       .flex;
       position: relative;
       transition: transform 0.3s ease;
       cursor: pointer;
+
+      span {
+        display: none;
+      }
+
+      &:first-of-type {
+        margin-left: 0;
+      }
 
       &:last-of-type {
         margin-right: 0;
@@ -74,6 +80,11 @@ img {
         opacity: 0;
         bottom: -10px;
         transition: @anime-duration;
+
+        &.active {
+          opacity: 1;
+          bottom: 15px;
+        }
       }
 
       &:hover {
@@ -92,10 +103,40 @@ img {
   }
 }
 
+// 翻页按钮
+.page-index {
+  margin: 15px 10px;
+  .flex;
+  justify-content: right;
+
+  // margin-left: 15px;
+  // margin-right: 15px;
+
+  li {
+    width: 48px;
+    height: 8px;
+    background-color: @color-sg-gray-trans;
+    border-radius: 10px;
+    margin-right: 10px;
+    background-clip: content-box;
+    border: solid 1px @color-sg-orange-trans;
+    cursor: pointer;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+
+    &:hover,
+    &.active {
+      background-color: @color-white-trans;
+    }
+  }
+}
+
 // 菜单
 .menu {
-  max-width: 100%;
   height: 600px;
+  width: 100%;
   .flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -126,29 +167,55 @@ img {
   }
 }
 
-// 翻页按钮
-.page-index {
-  .flex;
-  margin-top: 10px;
-  margin-left: 15px;
 
-  li {
-    width: 48px;
-    height: 8px;
-    background-color: @color-sg-gray-trans;
-    border-radius: 10px;
-    margin-right: 10px;
-    background-clip: content-box;
-    border: solid 1px @color-sg-orange-trans;
-    cursor: pointer;
-
-    &:last-of-type {
-      margin-right: 0;
+@media only screen {
+  @media (max-width: 768px) {
+    body {
+      background-image: url("../image/cg/EV_SP02.png");
     }
 
-    &:hover, &.active {
-      background-color: @color-white-trans;
+    .header {
+      flex-direction: column;
+      height: 300px;
+
+      .logo {
+        height: 200px;
+      }
+
+      .clearlist {
+        margin-top: 20px;
+
+        li {
+
+          img {
+            display: none;
+          }
+
+          span {
+            .flex;
+            width: 100x;
+            line-height: 100px;
+            background-color: @color-sg-gray-trans;
+            font-size: 20px;
+            text-align: center;
+
+          }
+        }
+
+
+
+
+
+
+      }
     }
 
+    .page-index {
+      // display: none;
+    }
+
+    .menu {
+      display: none;
+    }
   }
 }
