--- a/article/sg0/static/css/main.less
+++ b/article/sg0/static/css/main.less
@@ -33,21 +33,25 @@ img {
 
 // 头部
 .header {
-  margin: 2vh 1vh;
+  // margin: 15px 10px;
+  padding: 15px 10px;
   .flex;
   justify-content: space-between;
+  max-height: 200px;
   height: 20vh;
-  // height: 200px;
 
   .logo {
     .flex;
     height: 100%;
+    flex-shrink: 2;
   }
 
   // 路线选择按钮
   .clearlist {
     .flex;
     height: 100%;
+    margin-left: 10px;
+    // flex-shrink: 1;
 
     li {
       height: 100%;
@@ -56,6 +60,22 @@ img {
       position: relative;
       transition: transform 0.3s ease;
       cursor: pointer;
+
+      &.active {
+        & .mask1 {
+          opacity: 1;
+        }
+
+        & .mask2 {
+          opacity: 1;
+          bottom: 10%;
+        }
+
+        & span {
+          color: @color-sg-orange;
+          text-shadow: 0px 0px 4px black;
+        }
+      }
 
       span {
         display: none;
@@ -68,22 +88,13 @@ img {
       .mask1 {
         position: absolute;
         opacity: 0;
-
-        &.active {
-          opacity: 1;
-        }
       }
 
       .mask2 {
         position: absolute;
         opacity: 0;
-        bottom: -10px;
-        transition: @anime-duration;
-
-        &.active {
-          opacity: 1;
-          bottom: 20px;
-        }
+        bottom: -10%;
+        transition: all @anime-duration;
       }
     }
   }
@@ -91,7 +102,7 @@ img {
 
 // 翻页按钮
 .page-index {
-  margin: 1vh;
+  margin: 10px;
   .flex;
   justify-content: right;
 
@@ -155,7 +166,7 @@ img {
 
       .mask2 {
         opacity: 1;
-        bottom: 20px;
+        bottom: 10%;
       }
     }
 
@@ -174,53 +185,74 @@ img {
   @media (max-width: @demarcation) {
     body {
       background-image: url("../image/cg/EV_SP02.png");
-      width: 90vw;
     }
 
+    // @keyframes anime-header-scroll-up {
+    //   0% {
+    //     background-color: transparent;
+    //   }
+
+    //   60% {
+    //     background-color: @color-sg-gray-trans;
+    //   }
+
+    //   100% {
+    //     background-color: @color-sg-gray;
+    //   }
+    // }
+
+    // @-webkit-keyframes anime-header-scroll-up {
+    //   0% {
+    //     background-color: transparent;
+    //   }
+
+    //   60% {
+    //     background-color: @color-sg-gray-trans;
+    //   }
+
+    //   100% {
+    //     background-color: @color-sg-gray;
+    //   }
+    // }
+
     .header {
-      flex-direction: column;
-      width: 90vw;
-      height: 30vh;
+      // background-color: @color-sg-gray;
+      // backdrop-filter: blur(3px);
+      height: 120px;
+      padding: 10px;
       position: fixed;
-      top: 2vh;
+      top: 0;
       left: 0;
       right: 0;
-      padding: 0;
-      margin: 0 auto;
-      // background-color: #bfa;
       z-index: 1;
-
-      .logo {
-        height: 75%;
-      }
+      // animation: anime-header-scroll-up 5s infinite;
+      /*Safari 和 Chrome:*/
+      // -webkit-animation: anime-header-scroll-up 5s infinite;
 
       .clearlist {
+        width: 60%;
+        flex-wrap: wrap;
         justify-content: space-between;
-        width: 100%;
-        margin-top: 1vh;
+
         li {
-          width: 15%;
+          // background-color: @color-sg-gray-trans;
+          width: 30%;
+          height: 40%;
+          margin: 0px;
+          border: solid 1px @color-sg-orange-trans;
+          border-radius: 10px;
+          justify-content: center;
+
           img {
             display: none;
           }
 
           span {
-            .flex;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            background-color: @color-sg-gray-trans;
-            border: solid 1px @color-sg-orange-trans;
-            justify-content: center;
+            display: block;
             text-align: center;
-            font-size: 20px;
+            font-size: 18px;
             color: @color-white-trans;
             text-shadow: 0px 0px 4px @color-sg-orange;
-
-            &.active {
-              color: @color-sg-orange;
-              text-shadow: 0px 0px 4px black;
-            }
           }
         }
       }
@@ -232,17 +264,12 @@ img {
 
     .menu {
       display: table;
-      position: relative;
-      top: 34vh;
-      height: 60vh;
-      overflow-y: auto;
+      margin-top: 150px;
 
       a {
         width: 90vw;
         margin: 5px auto;
       }
-
-
     }
   }
 }
