--- a/article/sg0/static/css/main.less
+++ b/article/sg0/static/css/main.less
@@ -5,11 +5,15 @@ body {
   padding: 0;
   background-color: rgb(25, 25, 25);
   color: rgb(255, 255, 255);
-  background-image: url("../image/cg/EV_SP01.png");
+  background-image: url("../image/element/bg-desktop.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  -webkit-background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -webkit-background-attachment: fixed;
+  -webkit-background-position: center;
   font-family: 'ZCOOL QingKe HuangYou', sans-serif;
 }
 
@@ -184,11 +188,7 @@ img {
   // 竖屏模式
   @media (max-width: @demarcation) {
     body {
-      background-image: url("../image/cg/EV_SP02.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
+      background-image: url("../image/element/bg-mobile.png");
     }
 
     // @keyframes anime-header-scroll-up {
