--- a/article/sg0/static/css/main.less
+++ b/article/sg0/static/css/main.less
@@ -10,10 +10,11 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  -webkit-background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -webkit-background-attachment: fixed;
-  -webkit-background-position: center;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // -webkit-background-position: center;
+  // transform: translateZ(0);
   font-family: 'ZCOOL QingKe HuangYou', sans-serif;
 }
 
@@ -188,7 +189,24 @@ img {
   // 竖屏模式
   @media (max-width: @demarcation) {
     body {
-      background-image: url("../image/element/bg-mobile.png");
+      // background-image: url("../image/element/bg-mobile.png");
+      background-image: none;
+
+      &::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        background-image: url("../image/element/bg-mobile.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        // background-attachment: fixed;
+
+      }
     }
 
     // @keyframes anime-header-scroll-up {
